fix alert z-index

--- a/app/assets/stylesheets/panel.scss
+++ b/app/assets/stylesheets/panel.scss
@@ -21,4 +21,4 @@
 
 #new_property_map.active { height: 300px; }
 
-div.alert-dismissible { position: fixed; top: 0; right: 0; z-index: 99; margin: 40px 10px 0 0; opacity: 0.93; }
+div.alert-dismissible { position: fixed; top: 0; right: 0; z-index: 8; margin: 40px 10px 0 0; opacity: 0.93; }
